--- a/RSN_Colab.ipynb
+++ b/RSN_Colab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPZt/8B8QEiJ+ZiyAnNtrRE",
+      "authorship_tag": "ABX9TyNPpoEceN9vTybaWb8IYE3Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "This file trains an object detection model and uses it to identify objects in images taken by a robot. The goal is for this program to be able to be implemented in a robot so it can identify objects/rooms for Robotic Semantic Navigation (RSN)."
+      ],
+      "metadata": {
+        "id": "m4BeOS6qCiga"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "F7ItA4CPq0-S",
         "colab": {
@@ -450,7 +459,7 @@
         },
         "outputId": "6f8f98ea-7d11-4e56-cea5-11e5b80ef0c0"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -488,7 +497,7 @@
       "metadata": {
         "id": "MQk3AGSR3Ukp"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -505,7 +514,7 @@
         },
         "outputId": "8a79d91a-f37b-4a3a-84c3-3f3d4fec9ddd"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -550,7 +559,7 @@
         },
         "outputId": "4a8b6aa8-0c30-44a6-a43b-bf9a1e830332"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -574,7 +583,7 @@
         },
         "outputId": "0ce07c80-8c1d-4401-d371-48ce8e33f2ed"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -607,7 +616,7 @@
         "id": "bjq3MIGCQlC1",
         "outputId": "c627ab6d-f877-415d-a949-34f37244b1e8"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -838,7 +847,7 @@
         },
         "outputId": "76ed45df-55a5-47fb-a81f-624d748e15bb"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
